--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -55,7 +55,7 @@ p {
     text-align: center;
 }
 
- hr {
+hr {
     display: block;
     height: 1px;
     border: 0;
@@ -111,6 +111,10 @@ p {
     background-size: cover;
 }
 
+#headerwrap .col-lg-6 {
+  margin-bottom: 50px;
+}
+
 #headerwrap h1 {
 	margin-top: 5px;
 	margin-bottom: 15px;
@@ -128,6 +132,14 @@ p {
   font-size: 28px;
   font-weight: 300;
   letter-spacing: 1px;
+}
+
+#headerwrap h4 {
+  color: white;
+}
+
+#headerwrap a {
+  text-decoration: none;
 }
 
 #headerwrap img {
@@ -184,7 +196,7 @@ p {
 }
 
 .app-button-2:hover {
-  color: #006bb3;
+  color: #09f;
   background-color: white;
 }
 
